--- a/src/default/assets/css/_constants.sass
+++ b/src/default/assets/css/_constants.sass
@@ -29,11 +29,11 @@ $COLOR_COMMENT_TAG_TEXT: #fff
 
 $COLOR_CODE_BACKGROUND: #141414
 
-$COLOR_TS: #9600ff
-$COLOR_TS_INTERFACE: #7da01f
-$COLOR_TS_ENUM: #cc9900
+$COLOR_TS: #fdfdfd
+$COLOR_TS_INTERFACE: #fdfdfd
+$COLOR_TS_ENUM: #fdfdfd
 $COLOR_TS_CLASS: #fdfdfd
-$COLOR_TS_PRIVATE: #808080
+$COLOR_TS_PRIVATE: #aaaaaa
 
 $TOOLBAR_COLOR: #151515
 $TOOLBAR_TEXT_COLOR: $THEME_COLOR
