--- a/src/default/assets/css/elements/_panel.sass
+++ b/src/default/assets/css/elements/_panel.sass
@@ -11,7 +11,7 @@
     margin: 20px 0
     padding: 20px
     background-color: $COLOR_PANEL
-    box-shadow: 1px 1px 0 $THEME_COLOR
+    box-shadow: 0 0 0 2px darken($THEME_COLOR, 20%)
     -webkit-border-radius: 7px
     -moz-border-radius: 7px
     border-radius: 7px
